--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1270,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fbba8813",
+   "id": "5808f42f",
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1305,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "86d261f8",
+   "id": "2787fe83",
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "66cf8fd3",
+   "id": "3fd07dbe",
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "95e6612a",
+   "id": "f05e41d1",
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "29f782a8",
+   "id": "6e424cb3",
    "metadata": {},
    "outputs": [
     {
@@ -1400,7 +1400,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0635a96f",
+   "id": "e3d37301",
    "metadata": {},
    "outputs": [
     {
@@ -1423,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ba967640",
+   "id": "500a83a6",
    "metadata": {},
    "outputs": [
     {
@@ -1446,7 +1446,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "61b6a5e3",
+   "id": "aadd1bb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1457,7 +1457,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "5cf1d354",
+   "id": "2f13622e",
    "metadata": {},
    "outputs": [
     {
@@ -1489,7 +1489,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "b01c7cb3",
+   "id": "2622d88f",
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c12917c9",
+   "id": "eecc18d4",
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1669,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4dd7a57e",
+   "id": "0eb3ac36",
    "metadata": {},
    "outputs": [
     {
@@ -1817,7 +1817,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "8fdfec51",
+   "id": "cd7e6809",
    "metadata": {},
    "outputs": [
     {
@@ -1843,7 +1843,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e3f241b9",
+   "id": "30405665",
    "metadata": {},
    "outputs": [
     {
@@ -1895,7 +1895,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "b7b8ea15",
+   "id": "67d11387",
    "metadata": {},
    "outputs": [
     {
@@ -2044,7 +2044,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0b73521e",
+   "id": "d6eb341e",
    "metadata": {},
    "outputs": [
     {
@@ -2067,7 +2067,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "59fba273",
+   "id": "1fbca002",
    "metadata": {},
    "outputs": [
     {
@@ -2102,7 +2102,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "71f03875",
+   "id": "e997d4f1",
    "metadata": {},
    "outputs": [
     {
@@ -2201,7 +2201,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "12bcfd15",
+   "id": "337e6828",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2214,7 +2214,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "458c0c84",
+   "id": "6c34550f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2225,7 +2225,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "b1aac505",
+   "id": "239da6b3",
    "metadata": {},
    "outputs": [
     {
@@ -2247,7 +2247,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d0b3c1c",
+   "id": "6186c491",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2260,7 +2260,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "5cf45791",
+   "id": "26a59046",
    "metadata": {},
    "outputs": [
     {
@@ -2286,7 +2286,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fda7bb8d",
+   "id": "4d1f5cd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2305,7 +2305,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "c3b822e1",
+   "id": "8fae7f03",
    "metadata": {},
    "outputs": [
     {
@@ -2394,7 +2394,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "335902b1",
+   "id": "47cbe9e9",
    "metadata": {},
    "outputs": [
     {
@@ -2488,7 +2488,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "6bdba42d",
+   "id": "bf98b6ca",
    "metadata": {},
    "outputs": [
     {
@@ -2527,7 +2527,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "3331b7b4",
+   "id": "73297d17",
    "metadata": {},
    "outputs": [
     {
@@ -2657,7 +2657,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "c0887a6e",
+   "id": "82f91912",
    "metadata": {},
    "outputs": [
     {
@@ -2695,7 +2695,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "b2fe649a",
+   "id": "8b5ee7b1",
    "metadata": {},
    "outputs": [
     {
@@ -2734,7 +2734,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "bc0b6ced",
+   "id": "671ab836",
    "metadata": {},
    "outputs": [
     {
@@ -2772,7 +2772,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "37e504bf",
+   "id": "2d7a166c",
    "metadata": {},
    "outputs": [
     {
@@ -2811,7 +2811,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "e930ce54",
+   "id": "26b3e893",
    "metadata": {},
    "outputs": [
     {
@@ -2849,7 +2849,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "6a3c8dbf",
+   "id": "e9ee1b4e",
    "metadata": {},
    "outputs": [
     {
@@ -2884,7 +2884,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "71773d82",
+   "id": "bb3bb80c",
    "metadata": {},
    "outputs": [
     {
@@ -3134,7 +3134,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "bbab7e73",
+   "id": "84917981",
    "metadata": {},
    "outputs": [
     {
@@ -3177,7 +3177,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "75b55b83",
+   "id": "c6cdf955",
    "metadata": {},
    "outputs": [
     {
@@ -3280,7 +3280,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "7945cc32",
+   "id": "a27130df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3293,7 +3293,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "607d3c69",
+   "id": "c68c830c",
    "metadata": {},
    "outputs": [
     {
@@ -3330,7 +3330,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "6fb839c6",
+   "id": "b6afc858",
    "metadata": {},
    "outputs": [
     {
@@ -3367,7 +3367,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "9d26dfdd",
+   "id": "d3a93cdc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3380,7 +3380,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "7f51e9e5",
+   "id": "b4aad55d",
    "metadata": {},
    "outputs": [
     {
@@ -3416,7 +3416,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "5fa0c358",
+   "id": "9511390a",
    "metadata": {},
    "outputs": [
     {
@@ -3452,7 +3452,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "9787399d",
+   "id": "71cd80aa",
    "metadata": {},
    "outputs": [
     {
@@ -3601,7 +3601,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "f2cb165c",
+   "id": "217237e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3612,7 +3612,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "96772ec1",
+   "id": "c6671518",
    "metadata": {},
    "outputs": [
     {
@@ -3651,7 +3651,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "215eede5",
+   "id": "c54bce02",
    "metadata": {},
    "outputs": [
     {
@@ -3805,7 +3805,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "dab11b85",
+   "id": "a6d15851",
    "metadata": {},
    "outputs": [
     {
@@ -3954,7 +3954,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "491137b3",
+   "id": "2fd13e11",
    "metadata": {},
    "outputs": [
     {
@@ -4101,8 +4101,298 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 93,
+   "id": "d6aa0574",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "2db94f85",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Rodriguez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>3999</td>\n",
+       "      <td>$2,547,363.00</td>\n",
+       "      <td>$637.00</td>\n",
+       "      <td>76.842711</td>\n",
+       "      <td>80.744686</td>\n",
+       "      <td>66.366592</td>\n",
+       "      <td>80.220055</td>\n",
+       "      <td>52.988247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2949</td>\n",
+       "      <td>$1,884,411.00</td>\n",
+       "      <td>$639.00</td>\n",
+       "      <td>76.711767</td>\n",
+       "      <td>81.158020</td>\n",
+       "      <td>65.988471</td>\n",
+       "      <td>80.739234</td>\n",
+       "      <td>53.204476</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Huang High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>2917</td>\n",
+       "      <td>$1,910,635.00</td>\n",
+       "      <td>$655.00</td>\n",
+       "      <td>76.629414</td>\n",
+       "      <td>81.182722</td>\n",
+       "      <td>65.683922</td>\n",
+       "      <td>81.316421</td>\n",
+       "      <td>53.513884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Hernandez High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4635</td>\n",
+       "      <td>$3,022,020.00</td>\n",
+       "      <td>$652.00</td>\n",
+       "      <td>77.289752</td>\n",
+       "      <td>80.934412</td>\n",
+       "      <td>66.752967</td>\n",
+       "      <td>80.862999</td>\n",
+       "      <td>53.527508</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Johnson High School</th>\n",
+       "      <td>District</td>\n",
+       "      <td>4761</td>\n",
+       "      <td>$3,094,650.00</td>\n",
+       "      <td>$650.00</td>\n",
+       "      <td>77.072464</td>\n",
+       "      <td>80.966394</td>\n",
+       "      <td>66.057551</td>\n",
+       "      <td>81.222432</td>\n",
+       "      <td>53.539172</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      School Type  Total Students Total School Budget  \\\n",
+       "Rodriguez High School    District            3999       $2,547,363.00   \n",
+       "Figueroa High School     District            2949       $1,884,411.00   \n",
+       "Huang High School        District            2917       $1,910,635.00   \n",
+       "Hernandez High School    District            4635       $3,022,020.00   \n",
+       "Johnson High School      District            4761       $3,094,650.00   \n",
+       "\n",
+       "                      Per Student Budget  Average Math Score  \\\n",
+       "Rodriguez High School            $637.00           76.842711   \n",
+       "Figueroa High School             $639.00           76.711767   \n",
+       "Huang High School                $655.00           76.629414   \n",
+       "Hernandez High School            $652.00           77.289752   \n",
+       "Johnson High School              $650.00           77.072464   \n",
+       "\n",
+       "                       Average Reading Score  % Passing Math  \\\n",
+       "Rodriguez High School              80.744686       66.366592   \n",
+       "Figueroa High School               81.158020       65.988471   \n",
+       "Huang High School                  81.182722       65.683922   \n",
+       "Hernandez High School              80.934412       66.752967   \n",
+       "Johnson High School                80.966394       66.057551   \n",
+       "\n",
+       "                       % Passing Reading  % Overall Passing  \n",
+       "Rodriguez High School          80.220055          52.988247  \n",
+       "Figueroa High School           80.739234          53.204476  \n",
+       "Huang High School              81.316421          53.513884  \n",
+       "Hernandez High School          80.862999          53.527508  \n",
+       "Johnson High School            81.222432          53.539172  "
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "bottom_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=True)\n",
+    "\n",
+    "bottom_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0250cb93",
+   "id": "0b5513ba",
    "metadata": {},
    "outputs": [],
    "source": []
